Update voovan-mvc.dockerfile